components/nds-filters/scss/filter-group.scss
////
/// @group components
////

@use '@nice-digital/nds-core/scss/colours';
@use '@nice-digital/nds-core/scss/focus';
@use '@nice-digital/nds-core/scss/spacing';
@use '@nice-digital/nds-core/scss/typography';
@use '@nice-digital/nds-core/scss/utils';
@use '@nice-digital/nds-core/scss/visibility';

@mixin -filter-group-heading-button {
  appearance: none;
  background: colours.$filter-group-heading-button-background;
  border: 0;
  color: colours.$text;
  cursor: pointer;
  display: block;
  font-weight: bold;
  line-height: 1.6;
  max-width: 100%;
  padding: utils.rem(spacing.$small);
  text-align: left;
  text-decoration: none;
  width: 100%;

  &:hover {
    background: colours.$filter-group-heading-button-background-hover;
  }

  &:focus {
    @include focus.default-focus-style;
  }
}

/// Filter group consist of a title with one of:
///   - set of checkbox options
///   - TODO e.g. free text, dates etc
/// Used to filter searches or lists of content.
/// @since 0.5.0
.filter-group {
  border: 1px solid colours.$filter-group-border;
  margin-top: utils.rem(spacing.$medium);

  legend {
    @include visibility.invisible;
  }

  fieldset {
    margin: 0;
    padding: 0;
  }

  &:first-child {
    margin-top: 0;
  }

  // Wrapper for the options when filter is a list of checboxes
  &__options {
    border: 0;

    &[aria-hidden='true'] {
      display: none;
    }
  }

  &__heading-icon {
    float: right;

    &--expanded {
      transform: rotate(180deg);
    }
  }

  // Heading used for collapsing/expanding the filter group
  &__heading {
    @include typography.font-size(0);
    background: colours.$filter-group-heading-background;
    border: 0;
    display: block;
    font-family: typography.get-font-family(sans);
    font-weight: 600;
    margin: 0;
    max-width: 100%;
    padding: 0;
    position: relative;
    text-align: left;
    width: 100%;

    a,
    button {
      @include -filter-group-heading-button;
    }

    &:hover {
      + .filter-group__options {
        border-color: colours.$filter-option-hover-border;
      }
    }

    @include utils.when-is(a, button) {
      @include -filter-group-heading-button;
    }
  }

  // Shows the number of filtered options e.g. "2 selected"
  &__count {
    @include typography.font-size(-1);
    display: block;
    font-weight: normal;
  }

  // Checkbox/radio button option (label)
  // DEPRECTAED: Use filter-option.scss (i.e. .filter__option) instead
  // This is here for backwards compat but may be removed in the future
  &__option {
    background: colours.$filter-option-background;
    border-top: 1px solid colours.$filter-option-border;
    color: colours.$text;
    cursor: pointer;
    display: block;
    line-height: 1.2;
    padding: utils.rem(
      spacing.$small spacing.$small spacing.$small spacing.$large
    );
    text-decoration: none;

    &:hover {
      background: colours.$filter-option-hover;
    }

    input {
      float: left;
      height: utils.rem(spacing.$medium);
      margin-left: utils.rem(-(spacing.$medium + spacing.$small));
      margin-top: utils.rem(spacing.$xx-small);
      width: utils.rem(spacing.$medium);

      &:focus {
        @include focus.default-focus-style;
        z-index: 1;
      }
    }
  }
}

